--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<link href="style/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
 	<title>Love on Camera</title>
 </head>
 
