Changed the background color a bunch to get browser-sync working.
Wanted to avoid fucking with node but meh... wasn't so bad. And now I have npm at my disposal so that's good.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-
 	<header>
 		<nav>
 			<ul>
@@ -18,7 +17,7 @@
 		</nav>
 	</header>
 	
-	<section>
+	<section id="one">
 	</section>
 
 	<footer>
