I now have four 100% height sections that are all a different color.
Sick af.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
 	<section id="one">
 	</section>
 
+	<section id="two">
+	</section>
+
+	<section id="three">
+	</section>
+
+	<section id="four">
+	</section>
+
 	<footer>
 	</footer>
 
