Added some more sections.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
 	<section id="four">
 	</section>
 
+	<section id="five">
+	</section>
+
+	<section id="six">
+	</section>
+
+	<section id="seven">
+	</section>
+
 	<footer>
 	</footer>
 
