Changed the id names of all the sections to match what they will actually be.

--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
 		</nav>
 	</header>
 	
-	<section id="one">
+	<section id="video">
 	</section>
 
-	<section id="two">
+	<section id="package">
 	</section>
 
-	<section id="three">
+	<section id="uhd">
 	</section>
 
-	<section id="four">
+	<section id="stills">
 	</section>
 
-	<section id="five">
+	<section id="edit">
 	</section>
 
-	<section id="six">
+	<section id="website">
 	</section>
 
-	<section id="seven">
+	<section id="contact">
 	</section>
 
 	<footer>
