All sections labeled and plugged in more color vabiables.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link href="style/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
 	<title>Love on Camera</title>
 </head>
 
@@ -18,24 +19,31 @@
 	</header>
 	
 	<section id="video">
+		<h1>Video</h1>
 	</section>
 
 	<section id="package">
+		<h1>Package</h1>
 	</section>
 
 	<section id="uhd">
+		<h1>4K UHD</h1>
 	</section>
 
 	<section id="stills">
+		<h1>Stills</h1>
 	</section>
 
 	<section id="edit">
+		<h1>Edit + Color</h1>
 	</section>
 
 	<section id="website">
+		<h1>Website</h1>
 	</section>
 
 	<section id="contact">
+		<h1>Contact</h1>
 	</section>
 
 	<footer>
