Dropped "UHD" from 4K section and changed the ID name.

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 		<h1>Package</h1>
 	</section>
 
-	<section id="uhd">
-		<h1>4K UHD</h1>
+	<section id="resolution">
+		<h1>4K</h1>
 	</section>
 
 	<section id="stills">
