--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 	
 	<section id="video">
 		<h1>Video</h1>
+		<video playsinline autoplay muted loop id="bgvid">
+			<source src="assets/video/bgvid.mp4" type="video/mp4">
+		</video>
 	</section>
 
 	<section id="package">
