--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link href="style/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
-	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Playfair+Display|Raleway" rel="stylesheet">
 	<title>Love on Camera</title>
 
 	<!-- CDN Links -->
