Named the addIndicators markers.
BTW... I think it's worth noting that I'm such an OG with Scrollmagic that I go back to Super Scrollorama... when I had to hand roll this very solution myself.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		// build scenes
 		new ScrollMagic.Scene({triggerElement: "#video"})
 						.setTween("#video > video", {y: "80%", ease: Linear.easeNone})
-						.addIndicators()
+						.addIndicators({name: "video"})
 						.addTo(controller);
 	</script>
 
