Added rulers to keep my layout nice and tight.
Just like photoshop! But not.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 	</header>
 	
 	<section id="video">
+		<div class="ruler" id="center"></div>
+		<div class="ruler" id="left"></div>
+		<div class="ruler" id="right"></div>
+		<div class="ruler" id="center-x"></div>
+
+
 		<h1>Video</h1>
 		<video playsinline autoplay muted loop id="bgvid">
 			<source src="assets/video/bgvid.mp4" type="video/mp4">
