Aaaaaand we have a very ugly but perfectly centered button!
Let's style this bitch!

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 		<video playsinline autoplay muted loop id="bgvid">
 			<source src="assets/video/bgvid.mp4" type="video/mp4">
 		</video>
+
+		<button type="button">Fuck yes.</button>	
 	</section>
 
 	<section id="package">
@@ -46,11 +48,11 @@
 	</section>
 
 	<section id="stills">
-		<h1>Stills</h1>
+		<h1>Edit + Color</h1>
 	</section>
 
 	<section id="edit">
-		<h1>Edit + Color</h1>
+		<h1>Stills</h1>
 	</section>
 
 	<section id="website">
