Changed text in button and set it's base style.
Now I need to change what it looks like in hover/active states etc.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<source src="assets/video/bgvid.mp4" type="video/mp4">
 		</video>
 
-		<button type="button">Fuck yes.</button>	
+		<button type="button">MORE INFO</button>	
 	</section>
 
 	<section id="package">
