Added a nice transition to CTA button, changed it from a button to a link changed the text.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<source src="assets/video/bgvid.mp4" type="video/mp4">
 		</video>
 
-		<button type="button">MORE INFO</button>	
+		<a href="#package" type="button">BOOK NOW</a>	
 	</section>
 
 	<section id="package">
