Added all the nav links. Now they just need to be styled.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
 	<header>
 		<nav>
 			<ul>
-				<li></li>
+				<li><a href="#package">Package</a></li>
+				<li><a href="#resolution">4K</a></li>
+				<li><a href="#edit">Edit + Color</a></li>
+				<li><a href="#stills">Stills</a></li>
+				<li><a href="#webpage">Webpage</a></li>
+				<li><a href="#book">Book</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -36,7 +41,7 @@
 			<source src="assets/video/bgvid.mp4" type="video/mp4">
 		</video>
 
-		<a href="#package" type="button">BOOK NOW</a>	
+		<a href="#book" class="button">BOOK NOW</a>	
 	</section>
 
 	<section id="package">
@@ -47,20 +52,20 @@
 		<h1>4K</h1>
 	</section>
 
-	<section id="stills">
+	<section id="edit">
 		<h1>Edit + Color</h1>
 	</section>
 
-	<section id="edit">
+	<section id="stills">
 		<h1>Stills</h1>
 	</section>
 
-	<section id="website">
-		<h1>Website</h1>
+	<section id="webpage">
+		<h1>Webpage</h1>
 	</section>
 
-	<section id="contact">
-		<h1>Contact</h1>
+	<section id="book">
+		<h1>Book</h1>
 	</section>
 
 	<script type="text/javascript">
