Repositioned nav. Still trying to think if this is the best way to do it.

--- a/index.html
+++ b/index.html
@@ -16,18 +16,20 @@
 </head>
 
 <body>
-	<header>
-		<nav>
-			<ul>
-				<li><a href="#package">Package</a></li>
-				<li><a href="#resolution">4K</a></li>
-				<li><a href="#edit">Edit + Color</a></li>
-				<li><a href="#stills">Stills</a></li>
-				<li><a href="#webpage">Webpage</a></li>
-				<li><a href="#book">Book</a></li>
-			</ul>
-		</nav>
-	</header>
+	<div id="wrapper">
+		<header>
+			<nav>
+				<ul>
+					<li><a href="#package">Package</a></li>
+					<li><a href="#resolution">4K</a></li>
+					<li><a href="#edit">Edit + Color</a></li>
+					<li><a href="#stills">Stills</a></li>
+					<li><a href="#webpage">Webpage</a></li>
+					<li><a href="#book">Book</a></li>
+				</ul>
+			</nav>
+		</header>
+	</div>
 	
 	<section id="video">
 		<div class="ruler" id="center"></div>
