--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
 	<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.min.js"></script>
+	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 </head>
 
 <body>
 		<header>
+			<a href="#video"><i class="fab fa-chrome" id="logo"></i></a>
 			<nav>
 				<ul>
 					<li><a href="#package">Package</a></li>
