--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.min.js"></script>
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 
+    <!-- Smooth scroll polyfill , also check out zen scroll. -->
 	<script src="js/smoothScroll.js"></script>
 </head>
 
