Added a comment to remind me about the smooth scrolling polyfill.

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 						.addTo(controller);
 	</script>
 
+	<!-- This probably isn't right -->
 	<script type="text/javascript">
 		smoothscroll.polyfill();	
 	</script>
