Fixed an issue and added the place I'm going to put a new script in.

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
 						.addTo(controller);
 	</script>
 
+	<!-- Script to change background color of nav bar -->
+	<script type="text/javascript"></script>
+
 	<!-- This probably isn't right -->
 	<script type="text/javascript">
 		smoothscroll.polyfill();	
