Made my comments better.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
 	</script>
 
 	<!-- Script to change background color of nav bar -->
-	<script type="text/javascript"></script>
+	<script type="text/javascript">
+		//Do some Scroll Magic shit here!
+	</script>
 
 	<!-- This probably isn't right -->
 	<script type="text/javascript">
