Added a comment to describe my next work item.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
 
 	<!-- Script to change background color of nav bar -->
 	<script type="text/javascript">
-		//Do some Scroll Magic shit here!
+		// 
+		// This should probably be done by adding a CSS class.
+		//
 		var scene = new ScrollMagic.Scene({
 							triggerElement: "#resolution"
 						})
