--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 		var scene = new ScrollMagic.Scene({
 							triggerElement: "#resolution"
 						})
-						.setTween("#test", 0.5, {backgroundColor: "green"}) // This should make the bar trun green.
+						.setTween("#test", 0.5, {backgroundColor: "#FF6B6B"}) // This should make the bar trun green.
 						.addIndicators({name: "Bar Test"})
 						.addTo(controller);
 
