Getting rid of the duration altogether took care of my problem.
Now the header changes colors and stays that way once the trigger has been passed.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		//
 
 		// init controller
-		var controller = new ScrollMagic.Controller({globalSceneOptions: {triggerHook: "onEnter", duration: "300%"}});
+		var controller = new ScrollMagic.Controller({globalSceneOptions: {triggerHook: "onEnter"}});
 
 		// build scenes
 		var scene = new ScrollMagic.Scene({triggerElement: "#edit"})
