Deleted <span> because it wasn't needed and it's gross.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<nav>
 				<a href="#video"><i class="fab fa-chrome" id="logo"></i></a>
 				<ul>
-					<li><a href="#resolution"><span>4K</span></a></li>
+					<li><a href="#resolution">4K</a></li>
 					<li><a href="#edit">Edit + Color</a></li>
 					<li><a href="#stills">Stills</a></li>
 					<li><a href="#webpage">Webpage</a></li>
