--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 			<nav>
 				<a href="#video"><i class="fab fa-chrome" id="logo"></i></a>
 				<ul>
-					<li><a id="waldo" href="#resolution">4K</a></li>
-					<li><a id="fuck" href="#edit">Edit + Color</a></li>
+					<li><a id="res_button" href="#resolution">4K</a></li>
+					<li><a id="edit_button" href="#edit">Edit + Color</a></li>
 					<li><a href="#stills">Stills</a></li>
 					<li><a href="#webpage">Webpage</a></li>
 					<li><a href="#book">Book</a></li>
