--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 			<nav>
 				<a href="#video"><i class="fab fa-chrome" id="logo"></i></a>
 				<ul>
-					<li><a id="res_button" href="#resolution">4K</a></li>
-					<li><a id="edit_button" href="#edit">Edit + Color</a></li>
-					<li><a href="#stills">Stills</a></li>
-					<li><a href="#webpage">Webpage</a></li>
-					<li><a href="#book">Book</a></li>
+					<li><a id="nav_4k" href="#resolution">4K</a></li>
+					<li><a id="nav_edit" href="#edit">Edit + Color</a></li>
+					<li><a id="nav_stills" href="#stills">Stills</a></li>
+					<li><a id="nav_webpage" href="#webpage">Webpage</a></li>
+					<li><a id="nav_book" href="#book">Book</a></li>
 				</ul>
 			</nav>
 		</header>
