Nav pretty much works flawlessly.
Only thing left to do is sort out the diff between the win and the dark class and clean up the JS.

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 			<nav>
 				<a href="#video"><i class="fab fa-chrome" id="logo"></i></a>
 				<ul>
-					<li><a id="nav_4k" href="#resolution">4K</a></li>
-					<li><a id="nav_edit" href="#edit">Edit + Color</a></li>
-					<li><a id="nav_stills" href="#stills">Stills</a></li>
-					<li><a id="nav_webpage" href="#webpage">Webpage</a></li>
-					<li><a id="nav_book" href="#book">Book</a></li>
+					<li><a id="nav_4k" class="ghost" href="#resolution">4K</a></li>
+					<li><a id="nav_edit" class="ghost" href="#edit">Edit + Color</a></li>
+					<li><a id="nav_stills" class="ghost" href="#stills">Stills</a></li>
+					<li><a id="nav_webpage" class="ghost" href="#webpage">Webpage</a></li>
+					<li><a id="nav_book" class="ghost" href="#book">Book</a></li>
 				</ul>
 			</nav>
 		</header>
