Changed "Book" button on nav back to NOT being a CTA because I think it's confusing.
I'm calling it right now. The nav is basically perfect. It just needs to have the code cleaned up.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<li><a id="nav_edit" class="ghost" href="#edit">Edit + Color</a></li>
 					<li><a id="nav_stills" class="ghost" href="#stills">Stills</a></li>
 					<li><a id="nav_webpage" class="ghost" href="#webpage">Webpage</a></li>
-					<li><a id="nav_book" class="ghost cta" href="#book">Book</a></li>
+					<li><a id="nav_book" class="ghost" href="#book">Book</a></li>
 				</ul>
 			</nav>
 		</header>
