Added div for scroll cue and changed the offset of various scroll events to coincide with it.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			</nav>
 		</header>
 	
-	<section id="video">
+	<section class="short" id="video">
 		<div class="ruler" id="center"></div>
 		<div class="ruler" id="left"></div>
 		<div class="ruler" id="right"></div>
@@ -46,6 +46,8 @@
 		</video>
 
 		<a href="#book" class="button">BOOK NOW</a>	
+
+		<div id="bar"></div>
 	</section>
 
 	<section id="resolution">
