Added a nice, neat little custom heart logo for testing purposes...
Because font awesome would not let me change attributes of my stand-in logo with JS for some reason. Could not figure it out.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
 <body>
 		<header id="test">
 			<nav>
-				<a href="#video"><i class="fab fa-chrome" id="logo"></i></a>
+				<!-- <a href="#video"><i class="fab fa-chrome" id="logo"></i></a> -->
+				<!-- <a href="#video"><img id="attempt" src="assets/image/heart.svg"></a> -->
+
+				<svg id="logo" data-name="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 241.58 214.56">
+					<title>Heart</title>
+					<path class="heart" d="M222.33,19.68l-.43-.43a66.19,66.19,0,0,0-93.34,0L120.79,27,113,19.25a66.19,66.19,0,0,0-93.34,0l-.43.43a66.19,66.19,0,0,0,0,93.34L27,120.79l93.77,93.77,93.77-93.77,7.77-7.77A66.19,66.19,0,0,0,222.33,19.68Z"/>
+				</svg>
+
 				<ul>
 					<li><a id="nav_4k" class="ghost" href="#resolution">4K</a></li>
 					<li><a id="nav_edit" class="ghost" href="#edit">Edit + Color</a></li>
