Created a comment for my 100th commit in this repo. Gotta keep things fun.
Yay!

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE HTML>
 
+<!-- ////////////////////////////////////////
+/////////// WOO HOO! 100 COMMITS! ///////////
+//////////////////////////////////////////-->
+
 <html>
 
 <head>
