Moved the background video parallax JS to bg.js

--- a/index.html
+++ b/index.html
@@ -79,19 +79,8 @@
 		<h1>Book</h1>
 	</section>
 
-
-	<script type="text/javascript">
-		// init controller
-		var controller = new ScrollMagic.Controller({});
-
-		// build scenes
-		new ScrollMagic.Scene({triggerElement: "#video", triggerHook: "onEnter", duration: "200%"})
-						.setTween("#video > video", {y: "80%", ease: Linear.easeNone})
-						.addIndicators({name: "video"})
-						.addTo(controller);
-	</script>
-
 	<!-- DOM -->
+	<script src="js/bg.js"></script>
 	<script src="js/nav.js"></script>
 
 	<!-- This probably isn't right -->
