Arrow has been put in bottom bar. It just needs to be styled.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
 
 		<a href="#book" class="button">BOOK NOW</a>	
 
-		<div id="bar"></div>
+		<div id="bar">
+			<svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 768.61 425.84">
+				<title>Arrow Joined</title>
+				<polygon class="cls-1" points="768.61 41.5 727.11 0 384.29 342.82 41.5 0.04 0 41.55 384.3 425.84 425.8 384.34 425.79 384.33 768.61 41.5"/>
+			</svg>
+		</div>
 	</section>
 
 	<section id="resolution">
