--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 
 
 		<h1>Video</h1>
-		<video playsinline autoplay muted loop id="bgvid">
+		<!-- <video playsinline autoplay muted loop id="bgvid">
 			<source src="assets/video/bgvid.mp4" type="video/mp4">
-		</video>
+		</video> -->
 
 		<a href="#book" class="button">BOOK NOW</a>	
 
