--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 			<source src="assets/video/bgvid.mp4" type="video/mp4">
 		</video> -->
 
-		<a href="#book" class="button">BOOK NOW</a>	
+		<iframe src="https://player.vimeo.com/video/270779897?background=1&autoplay=1&loop=1&byline=0&title=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
 
 		<div id="bar">
 			<svg id="liney" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 768.61 425.84">
