--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 			<source src="assets/video/bgvid.mp4" type="video/mp4">
 		</video> -->
 
-		<iframe src="https://player.vimeo.com/video/270779897?background=1&autoplay=1&loop=1&byline=0&title=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+		<iframe id="vimeo" src="https://player.vimeo.com/video/270779897?background=1&autoplay=1&loop=1&byline=0&title=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
+		<a href="#book" class="button">BOOK NOW</a>
 
 
 		<div id="bar">
