--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
 <body>
 		<header id="test">
 			<nav>
+				<!-- <a href="#video"><i class="fab fa-chrome" id="logo"></i></a> -->
+				<!-- <a href="#video"><img id="attempt" src="assets/image/heart.svg"></a> -->
+
+				<a href="#video">
+					<!--
+					<svg id="logo" data-name="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 241.58 214.56">
+					<title>Heart</title>
+					<path class="heart" d="M222.33,19.68l-.43-.43a66.19,66.19,0,0,0-93.34,0L120.79,27,113,19.25a66.19,66.19,0,0,0-93.34,0l-.43.43a66.19,66.19,0,0,0,0,93.34L27,120.79l93.77,93.77,93.77-93.77,7.77-7.77A66.19,66.19,0,0,0,222.33,19.68Z"/>
+					</svg>
+				-->
+				</a>
+
 				<a href="#video">
 					<svg id="real_logo" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 924.63 781.26">
 						<title>Home</title><path class="cls-1" d="M923.68,237.05a271.43,271.43,0,0,0-4.9-33.53L694.35,428V1.71Q680.85.21,667.18,0V247L483.12,62.92q-10.64,8.33-20.7,17.73L520,138.23H29A255.58,255.58,0,0,0,17,165.4H339L62.56,441.88Q70.75,452.62,80,462.81l0,0L230.28,312.58V612.35q13.91,12.43,27.18,23.81V493.55l257.29,257.3q10.63-6.78,23.2-15.24L404.63,602.3H705.51q14.32-13,29.26-27.18H585.61Z"/><path class="cls-2" d="M667.18,0C603.11-.77,537.6,20.32,483.12,62.92L667.18,247Z"/><path class="cls-2" d="M462.42,80.65l-.1.1C350.25-24.45,177.86-27.54,74.85,75.47A251.41,251.41,0,0,0,29,138.23H520Z"/><path class="cls-2" d="M17,165.4C-16.38,254.1-.23,359.66,62.56,441.88L339,165.4Z"/><path class="cls-2" d="M230.28,612.35V312.58L80,462.84A2069.23,2069.23,0,0,0,230.28,612.35Z"/><path class="cls-2" d="M257.46,636.16c124,106.38,204.86,145.1,204.86,145.1s18.9-9,52.43-30.41L257.46,493.55Z"/><path class="cls-2" d="M538,735.61c42-28.42,99.6-71.54,167.56-133.31H404.63Z"/><path class="cls-2" d="M923.68,237.05,585.61,575.12H734.77c34.52-32.72,71.33-70,109.86-112.31C903.31,398.36,930.2,315.49,923.68,237.05Z"/><path class="cls-2" d="M849.78,75.47C806.88,32.57,752,8.09,694.35,1.71V428L918.78,203.52C908.77,156.09,885.92,111.61,849.78,75.47Z"/>
@@ -46,14 +58,11 @@
 
 
 		<h1>Video</h1>
-		<!-- <video playsinline autoplay muted loop id="bgvid">
+		<video playsinline autoplay muted loop id="bgvid">
 			<source src="assets/video/bgvid.mp4" type="video/mp4">
-		</video> -->
+		</video>
 
-		<iframe id="vimeo" src="https://player.vimeo.com/video/270779897?background=1&autoplay=1&loop=1&byline=0&title=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-
-		<a href="#book" class="button">BOOK NOW</a>
-
+		<a href="#book" class="button">BOOK NOW</a>	
 
 		<div id="bar">
 			<svg id="liney" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 768.61 425.84">
