--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
 		</video>
 		-->
 
+		<iframe id="vimeo" src="https://player.vimeo.com/video/270779897?background=1&autoplay=1&loop=1&byline=0&title=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
 		<a href="#book" class="button">BOOK NOW</a>	
 
 		<div id="bar">
