Put in image for the resolution/4k section.

--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
 		<div class="ruler" id="right"></div>
 		<div class="ruler" id="center-x"></div>
 		<h1>4K</h1>
+
+		<img src="assets/img/altar.jpg">
 	</section>
 
 	<section id="edit">
