--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		<div class="ruler" id="center-x"></div>
 		<h1>4K</h1>
 
-		<img src="assets/img/altar.jpg">
+		<img id="altar" src="assets/img/altar.jpg">
 	</section>
 
 	<section id="edit">
@@ -96,6 +96,7 @@
 	<!-- DOM -->
 	<script src="js/bg.js"></script>
 	<script src="js/nav.js"></script>
+	<script src="js/resolution.js"></script>
 
 	<!-- This probably isn't right -->
 	<script type="text/javascript">
