Deleted the elements I was trying to manipulate in the resolution section. Something REALLY funky is going on with it. Just going to do static images for now.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		<div class="ruler" id="center-x"></div>
 		<h1>4K</h1>
 
-		<img id="altar" src="assets/img/altar.jpg">
+		<div id="blue" class="appear"></div>
 	</section>
 
 	<section id="edit">
@@ -96,7 +96,6 @@
 	<!-- DOM -->
 	<script src="js/bg.js"></script>
 	<script src="js/nav.js"></script>
-	<script src="js/resolution.js"></script>
 
 	<!-- This probably isn't right -->
 	<script type="text/javascript">
