Resolution picture works but the CSS is funky as shit.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
 		<div class="ruler" id="center-x"></div>
 		<h1>4K</h1>
 
-		<div id="blue" class="appear"></div>
+		<img id="altar" class="appear" src="assets/img/resolution.jpg">
+
 	</section>
 
 	<section id="edit">
@@ -96,6 +97,7 @@
 	<!-- DOM -->
 	<script src="js/bg.js"></script>
 	<script src="js/nav.js"></script>
+	<script src="js/resolution.js"></script>
 
 	<!-- This probably isn't right -->
 	<script type="text/javascript">
