Change the names of #altar and .appear to #res-id and .res-class. Now going to try to make this work better.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		<div class="ruler" id="center-x"></div>
 		<h1>4K</h1>
 
-		<img id="altar" class="appear" src="assets/img/resolution.jpg">
+		<img id="res-id" class="res-class" src="assets/img/resolution.jpg">
 
 	</section>
 
