Gonna ditch the scroll effects on the section images. Cannot get the class to toggle properly.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		<div class="ruler" id="center-x"></div>
 		<h1>4K</h1>
 
-		<img id="res-id" class="res-class" src="assets/img/resolution.jpg">
+		<img id="res-img" src="assets/img/resolution.jpg">
 
 	</section>
 
@@ -97,7 +97,6 @@
 	<!-- DOM -->
 	<script src="js/bg.js"></script>
 	<script src="js/nav.js"></script>
-	<script src="js/resolution.js"></script>
 
 	<!-- This probably isn't right -->
 	<script type="text/javascript">
