Got H1's lined up but then need to be contained/bound by a textbox div.

--- a/index.html
+++ b/index.html
@@ -68,13 +68,11 @@
 	</section>
 
 	<section id="resolution">
-		<div class="ruler" id="center"></div>
-		<div class="ruler" id="left"></div>
-		<div class="ruler" id="right"></div>
-		<div class="ruler" id="center-x"></div>
 		<h1>4K</h1>
 
 		<img id="res-img" src="assets/img/resolution.jpg">
+
+		<div class="line"></div>
 
 	</section>
 
