Created a text box that is the right size and aspect ratio. Now to fill it!

--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
 	</section>
 
 	<section id="resolution">
-		<h1>4K</h1>
+		<!-- <h1>4K</h1> -->
+
+		<div class="textbox"></div>
 
 		<img id="res-img" src="assets/img/resolution.jpg">
 
