Got an h1 tag inside the textbox and it's mostly OK.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
 	<section id="resolution">
 		<!-- <h1>4K</h1> -->
 
-		<div class="textbox"></div>
+		<div class="textbox">
+			<h1>4K</h1>
+		</div>
 
 		<img id="res-img" src="assets/img/resolution.jpg">
 
