--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link href="style/stylesheets/screen.css" rel="stylesheet" type="text/css" />
+	<link href="style/stylesheets/style.css" rel="stylesheet" type="text/css" />
 	<link href="https://fonts.googleapis.com/css?family=Raleway|Roboto:300" rel="stylesheet">
 	<title>Love on Camera</title>
 
